@@ -7,6 +7,8 @@ import (
 	"net/http/httptest"
 	"testing"
 
+	"fmt"
+
 	"github.com/stretchr/testify/assert"
 )
 
@@ -16,102 +18,41 @@ func TestIncCounter(t *testing.T) {
 	req.Header.Set("Accept", "application/json")
 	w := httptest.NewRecorder()
 
-	sendStatus(w, req, http.StatusServiceUnavailable, errFull)
-	assert.Equal(t, int64(1), errMap[5030].Get())
-
-	sendStatus(w, req, http.StatusServiceUnavailable, errConcurrencyLimitReached)
-	assert.Equal(t, int64(1), errMap[5031].Get())
-
-	sendStatus(w, req, http.StatusServiceUnavailable, errChannelClosed)
-	assert.Equal(t, int64(1), errMap[5032].Get())
-
-	sendStatus(w, req, http.StatusMethodNotAllowed, errors.New(""))
-	assert.Equal(t, int64(1), errMap[405].Get())
-
-	sendStatus(w, req, http.StatusTooManyRequests, errors.New(""))
-	assert.Equal(t, int64(1), errMap[429].Get())
-
-	sendStatus(w, req, http.StatusUnauthorized, errors.New(""))
-	assert.Equal(t, int64(1), errMap[401].Get())
-
-	sendStatus(w, req, http.StatusForbidden, errors.New(""))
-	assert.Equal(t, int64(1), errMap[403].Get())
-
-	sendStatus(w, req, http.StatusBadRequest, errors.New(""))
-	assert.Equal(t, int64(1), errMap[400].Get())
-
-	assert.Equal(t, int64(8), responseErrors.Get())
-
-	responseErrors.Set(0)
-	sendStatus(w, req, http.StatusNotImplemented, errors.New(""))
-	sendStatus(w, req, http.StatusServiceUnavailable, errors.New(""))
-	assert.Equal(t, int64(2), responseErrors.Get())
-
-	responseErrors.Set(0)
-	sendStatus(w, req, http.StatusOK, nil)
-	assert.Equal(t, int64(0), responseErrors.Get())
+	for i := 1; i <= 5; i++ {
+		for _, res := range []serverResponse{acceptedResponse, okResponse, forbiddenResponse, unauthorizedResponse,
+			requestTooLargeResponse, rateLimitedResponse, methodNotAllowedResponse, tooManyConcurrentRequestsResponse,
+			cannotValidateResponse(errors.New("")), cannotDecodeResponse(errors.New("")),
+			fullQueueResponse(errors.New("")), serverShuttingDownResponse(errors.New(""))} {
+			sendStatus(w, req, res)
+			assert.Equal(t, int64(i), res.counter.Get())
+		}
+	}
+	assert.Equal(t, int64(60), responseCounter.Get())
+	assert.Equal(t, int64(50), responseErrors.Get())
 }
 
-func TestJSONFailureResponse(t *testing.T) {
-	req, err := http.NewRequest("POST", "_", nil)
-	assert.Nil(t, err)
-
-	req.Header.Set("Accept", "application/json")
-	w := httptest.NewRecorder()
-
-	sendStatus(w, req, 400, errors.New("Cannot compare apples to oranges"))
-
-	resp := w.Result()
-	body, _ := ioutil.ReadAll(resp.Body)
-	assert.Equal(t, 400, w.Code)
-	assert.Equal(t, body, []byte(`{"error":"Cannot compare apples to oranges"}`))
-	assert.Equal(t, "application/json", resp.Header.Get("Content-Type"))
-}
-
-func TestJSONFailureResponseWhenAcceptingAnything(t *testing.T) {
-	req, err := http.NewRequest("POST", "_", nil)
-	assert.Nil(t, err)
-	req.Header.Set("Accept", "*/*")
-	w := httptest.NewRecorder()
-
-	sendStatus(w, req, 400, errors.New("Cannot compare apples to oranges"))
-
-	resp := w.Result()
-	body, _ := ioutil.ReadAll(resp.Body)
-	assert.Equal(t, 400, w.Code)
-	assert.Equal(t, body, []byte(`{"error":"Cannot compare apples to oranges"}`))
-	assert.Equal(t, "application/json", resp.Header.Get("Content-Type"))
-}
-
-func TestHTMLFailureResponse(t *testing.T) {
-	req, err := http.NewRequest("POST", "_", nil)
-	assert.Nil(t, err)
-	req.Header.Set("Accept", "text/html")
-	w := httptest.NewRecorder()
-
-	sendStatus(w, req, 400, errors.New("Cannot compare apples to oranges"))
-
-	resp := w.Result()
-	body, _ := ioutil.ReadAll(resp.Body)
-	assert.Equal(t, 400, w.Code)
-	assert.Equal(t, body, []byte(`Cannot compare apples to oranges`))
-	assert.Equal(t, "text/plain; charset=utf-8", resp.Header.Get("Content-Type"))
-}
-
-func TestFailureResponseNoAcceptHeader(t *testing.T) {
-	req, err := http.NewRequest("POST", "_", nil)
-	assert.Nil(t, err)
-
-	req.Header.Del("Accept")
-
-	w := httptest.NewRecorder()
-	sendStatus(w, req, 400, errors.New("Cannot compare apples to oranges"))
-
-	resp := w.Result()
-	body, _ := ioutil.ReadAll(resp.Body)
-	assert.Equal(t, 400, w.Code)
-	assert.Equal(t, body, []byte(`Cannot compare apples to oranges`))
-	assert.Equal(t, "text/plain; charset=utf-8", resp.Header.Get("Content-Type"))
+func TestAccept(t *testing.T) {
+	for idx, test := range []struct{ accept, expectedError, expectedContentType string }{
+		{"application/json", "{\"error\":\"data validation error: error message\"}", "application/json"},
+		{"*/*", "{\"error\":\"data validation error: error message\"}", "application/json"},
+		{"text/html", "data validation error: error message", "text/plain; charset=utf-8"},
+		{"", "data validation error: error message", "text/plain; charset=utf-8"},
+	} {
+		req, err := http.NewRequest("POST", "_", nil)
+		assert.Nil(t, err)
+		if test.accept != "" {
+			req.Header.Set("Accept", test.accept)
+		} else {
+			delete(req.Header, "Accept")
+		}
+		w := httptest.NewRecorder()
+		sendStatus(w, req, cannotValidateResponse(errors.New("error message")))
+		resp := w.Result()
+		body, _ := ioutil.ReadAll(resp.Body)
+		assert.Equal(t, 400, w.Code)
+		assert.Equal(t, test.expectedError, string(body), fmt.Sprintf("at index %d", idx))
+		assert.Equal(t, test.expectedContentType, resp.Header.Get("Content-Type"), fmt.Sprintf("at index %d", idx))
+	}
 }
 
 func TestIsAuthorized(t *testing.T) {
